--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img src="photo_kkrill.jpg" alt="Ваше Фото" class="profile-photo">
         <h1>Кирилл Красильников</h1>
         <p class="profession">QA Engineer</p>
+        <p class="info"><strong>Почта:</strong> i@krasilnikovkv.ru</p>
         <p class="info"><strong>Город:</strong> Уфа</p>
         <p class="info"><strong>Возраст:</strong> 38</p>
         <p class="info"><strong>Хобби:</strong> Плавание, горные лыжи</p>
